leaderboard profile view added

--- a/src/app/pages/leaderboard/user/user.component.html
+++ b/src/app/pages/leaderboard/user/user.component.html
@@ -1,6 +1,5 @@
 <ion-card>
-  <ion-item lines="none">
-
+  <ion-item lines="none" (click)="viewOtherUser()">
     <ion-avatar>
       <ion-img [src]='user.profileURL'></ion-img>
     </ion-avatar>
