own profile view added

--- a/src/app/pages/leaderboard/leaderboard.page.html
+++ b/src/app/pages/leaderboard/leaderboard.page.html
@@ -11,6 +11,7 @@
           <leaderboard-user *ngFor="let user of users; let i=index"
             [user]="user"
             [position]="i+1"
+            [isCurrentUser]="isCurrentUser(user)"
           >
           </leaderboard-user>
         </div>
