--- a/src/app/pages/leaderboard/user/user.component.html
+++ b/src/app/pages/leaderboard/user/user.component.html
@@ -18,7 +18,7 @@
   <div class="stats">
     <ion-item lines="none" class="stats">
       <ion-icon name="star-outline" slot="start"></ion-icon>
-      <ion-text>Points 50</ion-text>
+      <ion-text>{{user.points}}</ion-text>
     </ion-item>
   </div>
 </ion-card>
