--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.scss
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.scss
@@ -1,63 +1,80 @@
 ion-card {
-   width: inherit;
-   height: 100%;
-   margin: 0 auto;
+  width: inherit;
+  height: 100%;
+  margin: 0 auto;
 }
+
 * {
-   font-family: 'Montserrat', sans-serif;
- }
+  font-family: 'Montserrat', sans-serif;
+}
 
- .schedule-card {
-   margin-bottom: 100px;
- }
- 
- .logo {
-   display: block;
-   max-width: 35%; 
-   height: auto; 
-   margin: 0 auto;
- }
- 
+.schedule-card {
+  margin-bottom: 100px;
+}
 
-ion-card, ion-item {
-   opacity: 1;
+.logo {
+  display: block;
+  max-width: 35%;
+  height: auto;
+  margin: 0 auto;
+}
+
+
+ion-card,
+ion-item {
+  opacity: 1;
 }
 
 .larger-back-button {
-   --padding-start: 12px; 
-   --padding-end: 12px; 
-   font-size: 24px; 
+  --padding-start: 12px;
+  --padding-end: 12px;
+  font-size: 24px;
 }
 
 ion-button {
-   --background: #457b9d;
-   --background-hover: #558eb7;
-   --background-activated: #4a86a8;
-   --background-focused: #4a86a8;
-   border-radius: 12px;
+  --background: #457b9d;
+  --background-hover: #558eb7;
+  --background-activated: #4a86a8;
+  --background-focused: #4a86a8;
+  border-radius: 12px;
 
-   --border-style: solid;
-   --border-width: 2px;
-   --border-color: #A8DADC;
- 
-   --color: white;
-   margin: 15px;
- }
+  --border-style: solid;
+  --border-width: 2px;
+  --border-color: #A8DADC;
 
- ion-grid {
-   height: 100%;
- }
+  --color: white;
+  margin: 15px;
+}
 
- ion-row {
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   height: 100%;
- }
- ion-toolbar{
-   --background: #E63946
- }
+ion-grid {
+  height: 100%;
+}
 
- ion-toolbar ion-item{
-   --background: #E63946
- }
+ion-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+ion-toolbar {
+  --background: #E63946
+}
+
+ion-toolbar ion-item {
+  --background: #E63946
+}
+
+// .lower-icon {
+//   margin-top: 10px;
+// }
+
+// .location-item {
+//   display: flex;
+//   align-items: center;
+// }
+
+// .location-icon {
+//   margin-top: 0;
+//   margin-bottom: 0;
+// }
