--- a/src/app/pages/fitnessgoal-view/fitnessgoal-view.page.html
+++ b/src/app/pages/fitnessgoal-view/fitnessgoal-view.page.html
@@ -1,38 +1,30 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-item>
-      <backbutton></backbutton>
-      <ion-title>Goal Details</ion-title>
 
-    </ion-item>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-title size="large">Goals</ion-title>
+      <ion-item>
+        <backbutton></backbutton>
+        <ion-title>Goal Details</ion-title>
+      </ion-item>
     </ion-toolbar>
   </ion-header>
 
   <ion-content>
-    <ion-item>
-      <ion-label position="stacked">{{goalName}}</ion-label>
-    </ion-item>
+    <div class="goal-name">
+      <ion-label class="goal-name-label">{{goalName}}</ion-label>
+    </div>
 
-    <ion-list>
-      <ion-item *ngFor="let task of tasks">
-        <ion-item [disabled] = "task.done">
-          <ion-checkbox [(ngModel)]="task.done"></ion-checkbox>
-          <ion-label>{{ task.content }}</ion-label>
+    <div class="task-list">
+      <ion-list>
+        <ion-item *ngFor="let task of tasks">
+          <ion-item [disabled]="task.done" class="task-item">
+            <ion-checkbox [(ngModel)]="task.done" slot="start"></ion-checkbox>
+            <ion-label class="task-content">{{ task.content }}</ion-label>
+          </ion-item>
         </ion-item>
-
-      </ion-item>
-    </ion-list>
+      </ion-list>
+    </div>
 
     <div class="ion-padding">
       <ion-button expand="full" (click)="saveGoal()" routerLink="/fitnessgoals">Done</ion-button>
     </div>
   </ion-content>
-
-</ion-content>
