Added gym rating

--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -42,7 +42,8 @@
   </ion-card-header>
 
   <ion-card-content>
-    <!-- {{ gym.description }} -->
+    <!-- {{ gym.description }} replaced with rating-->
+    Rating: {{ gym.rating ? gym.rating : 'No Rating' }}
   </ion-card-content>
 </ion-card>
 </ion-content>
