--- a/src/app/pages/chatbot/chatbot.page.html
+++ b/src/app/pages/chatbot/chatbot.page.html
@@ -1,26 +1,25 @@
-<ion-header>
-  <ion-toolbar>
-      <ion-title>Chatbot</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
+<ion-header></ion-header>
+<br><br><br>
+<ion-content class="main">
+  <h1 class="center2">SweatSession-Bot</h1>
   <ion-list>
-      <ion-item *ngFor="let message of messages">
-          <div [ngClass]="{'user-message': message.sender === 'user', 'bot-message': message.sender === 'bot'}">
-              {{ message.text }}
-          </div>
-      </ion-item>
+    <ion-item lines="none" *ngFor="let message of messages">
+      <p>{{message.sender}}{{": "}}</p>
+      <div [ngClass]="{'user-message': message.sender === 'user', 'bot-message': message.sender === 'SweatSession-bot'}">
+        {{ message.text }}
+      </div>
+    </ion-item><br>
   </ion-list>
-
-  <div *ngIf="loading">{{"&nbsp;".repeat(45)}}
+  <div *ngIf="loading" class="loading-container">
     <ion-spinner color="warning" class="center"></ion-spinner>
   </div>
+  <br><br>
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
-      <ion-input [(ngModel)]="userMessage" placeholder="Enter your message"></ion-input>
-      <ion-button (click)="sendUserMessage()">Send</ion-button>
+  <ion-toolbar color="light">
+    <ion-input [(ngModel)]="userMessage" placeholder="Enter your message"></ion-input>
+    <ion-button color="primary" (click)="sendUserMessage()">Send</ion-button>
   </ion-toolbar>
 </ion-footer>
+
