--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -10,9 +10,7 @@
 
 
 <ion-content class="main">
-  <ion-item lines="none">
-    <ion-title slot="end" style="display:inline-block; background: none; " ><ion-button fill="clear" (click)="clearNotifications()">Clear All</ion-button></ion-title>
-  </ion-item>
+  <ion-title class="flex-center3" style="display:inline-block; background: none; " ><ion-button color="light" size="default" (click)="clearNotifications()">Clear All</ion-button></ion-title>
     <br>
     <br>
     
