--- a/src/app/pages/chatbot/chatbot.page.html
+++ b/src/app/pages/chatbot/chatbot.page.html
@@ -4,14 +4,15 @@
   <h1 class="center2">SweatSession-Bot</h1>
   <ion-list>
     <ion-item lines="none" *ngFor="let message of messages">
-      <p>{{message.sender}}{{": "}}</p>
-      <div [ngClass]="{'user-message': message.sender === 'user', 'bot-message': message.sender === 'SweatSession-bot'}">
+      <p slot="end" *ngIf="message.sender === 'SS-bot'">{{": "}}{{message.sender}}</p>
+      <p *ngIf="message.sender === 'user'">{{message.sender}}{{": "}}</p>
+      <div [ngClass]="{'user-message': message.sender === 'user', 'bot-message': message.sender === 'SS-bot'}">
         {{ message.text }}
       </div>
     </ion-item><br>
   </ion-list>
   <div *ngIf="loading" class="loading-container">
-    <ion-spinner color="warning" class="center"></ion-spinner>
+    <ion-spinner color="secondary" class="center"></ion-spinner>
   </div>
   <br><br>
 </ion-content>
