--- a/src/app/pages/chatbot/chatbot.page.scss
+++ b/src/app/pages/chatbot/chatbot.page.scss
@@ -1,12 +1,12 @@
 .user-message {
-    background-color: #DCF8C6;
+    background-color: #e76363;
     padding: 10px;
     border-radius: 10px;
     margin-bottom: 5px;
   }
 
   .bot-message {
-    background-color: #b9bcf3;
+    background-color: #2adeee;
     padding: 10px;
     border-radius: 10px;
     margin-bottom: 5px;
