--- a/src/app/pages/messages/chat/chat.component.html
+++ b/src/app/pages/messages/chat/chat.component.html
@@ -4,7 +4,7 @@
   </ion-avatar>
   <ion-label>
     <h2>{{ chatFriend.user.displayName }}</h2>
-    <p>{{ chatFriend.lastChat.text }}</p>
+    <p>{{ chatFriend.lastChat!.text }}</p>
     <p class="timestamp">{{ toDate() }}</p>
   </ion-label>
 </ion-item>
