--- a/src/app/pages/leaderboard/user/user.component.html
+++ b/src/app/pages/leaderboard/user/user.component.html
@@ -7,7 +7,7 @@
       {{user.displayName}}
     </ion-text>
     <ion-text class="user-name" *ngIf="isCurrentUser">
-      You
+      {{user.displayName}}(You)
     </ion-text>
 
     <ion-item slot="end" lines="none">
