--- a/src/app/pages/chatbot/chatbot.page.html
+++ b/src/app/pages/chatbot/chatbot.page.html
@@ -19,8 +19,8 @@
 
 <ion-footer>
   <ion-toolbar color="light">
-    <ion-input [(ngModel)]="userMessage" placeholder="Enter your message"></ion-input>
-    <ion-button color="primary" (click)="sendUserMessage()">Send</ion-button>
+    <ion-input [(ngModel)]="userMessage" placeholder="Enter your Question"></ion-input>
+    <ion-button color="white" (click)="sendUserMessage()">Send</ion-button>
   </ion-toolbar>
 </ion-footer>
 
