--- a/src/app/pages/chatbot/chatbot.page.scss
+++ b/src/app/pages/chatbot/chatbot.page.scss
@@ -5,6 +5,17 @@
     margin-bottom: 5px;
   }
 
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
+ion-footer{
+  ion-toolbar{
+    display: flex;
+    justify-content: center;
+  }
+}
+
   .bot-message {
     background-color: #2adeee;
     padding: 10px;
