--- a/src/app/pages/messages/chatroom/chatroom.component.html
+++ b/src/app/pages/messages/chatroom/chatroom.component.html
@@ -7,7 +7,9 @@
           <ion-avatar>
             <ion-img [src]="friendProfile.profileURL" alt="profile pic here"></ion-img>
           </ion-avatar>
-          <ion-text> {{friendProfile.displayName}}</ion-text>
+          <ion-label>
+            <h2>{{friendProfile.displayName}}</h2>
+          </ion-label> 
         </ion-item>
       </ion-title>
     </ion-item>
