--- a/src/app/pages/otheruser/otheruser.page.html
+++ b/src/app/pages/otheruser/otheruser.page.html
@@ -15,7 +15,7 @@
       </ion-avatar>
     </ion-item>
     <ion-item id="userName">
-        {{user!.name}}
+        {{user!.displayName}}
     </ion-item>
     <ion-item>
         <ion-button *ngIf="friendshipStatus" (click)="removeFriend()">
